# deagif

./: .gitignore  Cargo.toml  README.md  style.css
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
