[package]
name = "deagif-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = { version = "0.3.59", features = ["File", "DragEvent", "DataTransfer"] }
yew = { version="0.20.0", features = ["csr"] }
base64 = "0.21.0"
gloo = "0.8.0"

[workspace]
members = ["src-tauri"]
